entrada de dados sendo alocadas em suas variaveis

--- a/app/src/main/res/layout/activity_listagem.xml
+++ b/app/src/main/res/layout/activity_listagem.xml
@@ -8,6 +8,7 @@
     tools:context=".listagem">
 
     <ListView
+        android:id="@+id/ListViewLista"
         android:layout_width="409dp"
         android:layout_height="729dp"
         android:layout_marginEnd="1dp"
