--- a/app/src/main/res/layout/activity_listagem.xml
+++ b/app/src/main/res/layout/activity_listagem.xml
@@ -13,6 +13,10 @@
         android:layout_height="729dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
+
+        android:textSize="50dp"
+        android:paddingStart="20dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
